# 24-django-tutorial

./: .gitignore  .pre-commit-config.yaml  docker-compose.test.yaml  manage.py  pyproject.toml  test.Dockerfile
.github/: CODEOWNERS
.github/workflows/: assigment-1.yml  assigment-2.yml  assigment-3.yml
django_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_study_created_by.py  0003_student.py  0003_studyparticipation.py
main/tests/: test_assignment_1.py  test_assignment_2.py  test_assignment_3.py
